--- a/views/info.ejs
+++ b/views/info.ejs
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3"> 
       <div class="container-fluid">
         <img src="/img/logo.png" alt="Logo" height="40" class="d-inline-block align-text-top">
-        <a class="navbar-brand" href="/">Mochi Store</a>
+        <a class="navbar-brand" href="/">Everone</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,17 +39,8 @@
             <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
             <li class="nav-item"><a class="nav-link" href="/product">Sản phẩm</a></li>
             <li class="nav-item">
-            <% if (session?.user?.role === 'admin') { %>
-                <a class="nav-link active" href="/admin">
-                <i class="bi bi-cart-fill me-1"></i>My Info
-                </a>
-            <% } else { %>
-                <a class="nav-link active" href="/info">
-                <i class="bi bi-cart-fill me-1"></i>My Info
-                </a>
-            <% } %>
+              <a id = "info" class="nav-link active" href="/info"><i class="bi bi-cart-fill me-1"></i>My Info</a>
             </li>
-            <li class="nav-item"><button class="btn cute-btn me-2">🎁 Khuyến mãi</button></li>
             <li class="nav-item"><button id="yt" class="btn cute-btn danger me-2">▶ YouTube</button></li>
             <% if (session && session.user) { %>
               <li class="nav-item user-welcome">
@@ -66,8 +57,9 @@
       </div>
     </nav>
   </header>
+
     <!-- Main Content -->
-    <main class="container py-5 flex-grow-1 mt-5">
+  <main class="container py-5 flex-grow-1">
       <section class="text-center mb-5">
           <h1 class="section-title">👤 My Account</h1>
           <p class="lead">Here you can review your past orders.</p>
@@ -156,12 +148,9 @@
           </div>
       </section>
   </main>
-  
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="/script/info-utils.js"></script>
-  <!-- Authentication -->
-  <script type="module" src="/script/auth-utils.js"></script>
   <script>
     let button = document.getElementById('yt');
     button.addEventListener('click', () => {
